# DeckBuilderDjangoWebsiteCC

./: .gitignore  LICENSE  README.md  dodo.py  requirements.txt  setup.cfg
CCwebsite/: manage.py  run.sh  run_tests.sh  test.json  test.txt  tree.json
CCwebsite/CCwebsite/: asgi.py  generate_default_private_settings.py  settings.py  urls.py  wsgi.py
CCwebsite/DeckBuilder/: apps.py  forms.py  models.py  tools.py  urls.py  views.py  views.py.orig
CCwebsite/DeckBuilder/migrations/: 0001_initial.py  0002_simplemodel.py
CCwebsite/DeckBuilder/translation/en/LC_MESSAGES/: tools.po
CCwebsite/DeckBuilder/translation/ru/LC_MESSAGES/: tools.po
CCwebsite/templates/: CrystalBasic.html  DeckBuilderPage.html  base.html  base0ld.html
CCwebsite/templates/includes/: footer.html  head.html  styles.css
CCwebsite/templates/static/: test.ipynb
CCwebsite/templates/static/data/background/: resizer.py
CCwebsite/templates/static/jsons/: base_template_standart.json  black_tree_layout.json  blue_tree_layout.json  color_matching.json  crystal_tree_layout.json  deckbuilder_state_default.json  green_tree_layout.json  sort_order.json  white_tree_layout.json
CCwebsite/tests/: DeckBuilderTests.py
docs/: DeckManipulations.rst  conf.py  index.rst  setting_up.rst  tools_docs.rst
tools/: img_filename_taker.py  img_tools.py  names.json
