[metadata]
name = DeckBuilderDjangoWebsiteCC
version = 0.0.1

[options]
packages = find_namespace:
install_requires =
    pillow
    numpy
    Sphinx
    django
    django-allauth
    social-auth-app-django
    pytest
    pybabel
include_package_data=True

[options.packages.find]
exclude = data*, raw_data*

[options.package_data]
* = *.png, *.jpg, *.html, *.js, *.inv, *.css, *.txt, *.json, *.mo, *.sh